tests/ui/dont_panic.stderr
error: `impl_fn` can panic
  --> $DIR/dont_panic.rs:36:1
   |
36 | fn impl_fn(x: impl A) {
   | ^^^^^^^^^^^^^^^^^^^^^ this function can panic
37 |     x.from_trait();
   |       ---------- panic can occur here
38 |     x.from_a_impl();
   |       ----------- panic can occur here
   |
note: the lint level is defined here
  --> $DIR/dont_panic.rs:35:8
   |
35 | #[deny(redpen::dont_panic)]
   |        ^^^^^^^^^^^^^^^^^^

error: `trait_object` can panic
  --> $DIR/dont_panic.rs:41:1
   |
41 | fn trait_object(x: Box<dyn A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function can panic
42 |     x.from_trait();
   |       ---------- panic can occur here
43 |     x.from_a_impl();
   |       ----------- panic can occur here
   |
note: the lint level is defined here
  --> $DIR/dont_panic.rs:40:8
   |
40 | #[deny(redpen::dont_panic)]
   |        ^^^^^^^^^^^^^^^^^^

error: `foo` can panic
  --> $DIR/dont_panic.rs:47:1
   |
47 |   fn foo() {
   |   ^^^^^^^^ this function can panic
48 |       panic!("shouldn't happen!");
   |       --------------------------- panic can occur here
49 |       S.foo();
   |         --- panic can occur here
50 |       S.from_trait();
   |         ---------- panic can occur here
51 |       S.from_a_impl();
   |         ----------- panic can occur here
52 |       S.from_impl();
   |         --------- panic can occur here
53 |       #[allow(redpen::dont_panic)]
54 | /     (|| {
55 | |         panic!();
56 | |     })();
   | |______- panic can occur here
...
59 |       x();
   |       - panic can occur here
...
62 |       let _ = x[1];
   |               ---- panic can occur here
   |
note: the lint level is defined here
  --> $DIR/dont_panic.rs:46:8
   |
46 | #[deny(redpen::dont_panic)]
   |        ^^^^^^^^^^^^^^^^^^

error: `bar` can panic
  --> $DIR/dont_panic.rs:67:1
   |
67 | fn bar() {
   | ^^^^^^^^ this function can panic
68 |     foo();
   |     --- panic can occur here
   |
note: the lint level is defined here
  --> $DIR/dont_panic.rs:66:8
   |
66 | #[deny(redpen::dont_panic)]
   |        ^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

